# mcp-test

./: README.md  pyproject.toml
mcp_test/: __init__.py  cli.py  client.py  plugin.py
tests/: example_server.py  test_client.py
