[project]
name = "mcp-pytest"
version = "0.1.0"
description = "pytest integration and CLI for testing MCP servers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["pytest>=7.0"]

[project.scripts]
mcp-test = "mcp_test.cli:main"

[project.entry-points."pytest11"]
mcp_test = "mcp_test.plugin"

[project.urls]
Homepage = "https://github.com/0-co/mcp-test"
Repository = "https://github.com/0-co/mcp-test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
